still working on fixing those buttons, errors on small screen

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -2,8 +2,8 @@
 .slider_switch {
   position: relative;
   display: inline-block;
-  width: 90%;
-  height: 60%;
+  width: 200px;
+  height: 65px;
 }
 
 /* Hide default HTML checkbox */
@@ -18,8 +18,8 @@
   right: 0;
   bottom: 0;
   background-color: none;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 1s;
+  transition: 1s;
   border: 5px solid #9e37cb;
 }
 .slider p{
@@ -28,10 +28,16 @@
   font-weight: 700;
   font-size: 1.5em;
   line-height: 1.5em;
-  transform:  translateY(-25%);
-  text-align: right;
-  padding-right:.25em;
-  transition: .5s;
+  transform:  translateY(-25%); 
+  transition: 1s;
+  -webkit-transition: 1s;
+  position:  absolute;
+  top:  -4px;
+  right: 6px;
+}
+.slider p:before{
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .slider:before {
@@ -39,11 +45,11 @@
   content: "";
   height: 4em;
   width: 4em;
-  left: -4px;
-  top: -4px;
+  left: -5.5px;
+  top: -4.5px;
   background: url('../Rasberry HA icon Bedroom 2.png') 50% 50% no-repeat;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 1s;
+  transition: 1s;
   background-size: cover;
 }
 
@@ -52,16 +58,16 @@ input:checked + .slider {
   border: 5px solid #4717F6;
 }
 input:checked + .slider p{
-  text-align: left;
-  padding-left: .25em;
+  left: 6px;
   color: #4717f6;
 }
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: none;
+  
 }
 
 input:checked + .slider:before {
-  transform: translateX(14vw)
+  transform: translateX(137px)
 }
 
 /* Rounded sliders */
